CrOS: Update default avatar for MD

This eliminates the inconsistent 'beaker' image and replaces it with
a new image. It also merges the 'loading' image with the default image.

Bug: 709917
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I139d8555c2beb7417d1e79b128ae5ca680258084
Reviewed-on: https://chromium-review.googlesource.com/578556
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488806}