chrome/browser/ui/ash/session_controller_client.cc
@@ -31,7 +31,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/ui/ash/multi_user/multi_user_util.h"
 #include "chrome/browser/ui/ash/multi_user/user_switch_util.h"
 #include "chrome/common/pref_names.h"
-#include "chrome/grit/theme_resources.h"
 #include "chromeos/dbus/dbus_thread_manager.h"
 #include "chromeos/dbus/session_manager_client.h"
 #include "components/prefs/pref_change_registrar.h"
@@ -44,6 +43,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "mojo/public/cpp/bindings/equals_traits.h"
 #include "services/service_manager/public/cpp/connector.h"
 #include "ui/base/resource/resource_bundle.h"
+#include "ui/chromeos/resources/grit/ui_chromeos_resources.h"
 #include "ui/gfx/image/image_skia.h"
 
 using session_manager::Session;
@@ -93,7 +93,7 @@ ash::mojom::UserSessionPtr UserToUserSession(const User& user) {
   if (session->user_info->avatar.isNull()) {
     session->user_info->avatar =
         *ResourceBundle::GetSharedInstance().GetImageSkiaNamed(
-            IDR_PROFILE_PICTURE_LOADING);
+            IDR_LOGIN_DEFAULT_USER);
   }
 
   if (user.IsSupervised()) {
