chrome/browser/ui/webui/options/chromeos/user_image_source.cc
@@ -10,7 +10,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/strings/string_split.h"
 #include "chrome/browser/chromeos/login/users/default_user_image/default_user_images.h"
 #include "chrome/common/url_constants.h"
-#include "chrome/grit/theme_resources.h"
 #include "components/signin/core/account_id/account_id.h"
 #include "components/user_manager/known_user.h"
 #include "components/user_manager/user_manager.h"
@@ -58,7 +57,7 @@ scoped_refptr<base::RefCountedMemory> GetUserImageInternal(
       return user->image_bytes();
     if (user->image_is_stub()) {
       return ResourceBundle::GetSharedInstance().LoadDataResourceBytesForScale(
-          IDR_PROFILE_PICTURE_LOADING, ui::SCALE_FACTOR_100P);
+          IDR_LOGIN_DEFAULT_USER, ui::SCALE_FACTOR_100P);
     }
     if (user->HasDefaultImage()) {
       return ResourceBundle::GetSharedInstance().LoadDataResourceBytesForScale(
