chrome/browser/resources/chromeos/login/oobe_change_picture.js
@@ -15,7 +15,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 var OobeDefaultImage;
 
 /** @const */ var OOBE_DEFAULT_AVATAR_IMAGE_URL =
-    'chrome://theme/IDR_PROFILE_PICTURE_LOADING';
+    'chrome://theme/IDR_LOGIN_DEFAULT_USER';
 
 /**
  * @fileoverview
