chrome/browser/resources/chromeos/user_images_grid.js
@@ -667,7 +667,7 @@ cr.define('options', function() {
   UserImagesGrid.ButtonImages = {
     TAKE_PHOTO: 'chrome://theme/IDR_BUTTON_USER_IMAGE_TAKE_PHOTO',
     CHOOSE_FILE: 'chrome://theme/IDR_BUTTON_USER_IMAGE_CHOOSE_FILE',
-    PROFILE_PICTURE: 'chrome://theme/IDR_PROFILE_PICTURE_LOADING'
+    PROFILE_PICTURE: 'chrome://theme/IDR_LOGIN_DEFAULT_USER'
   };
 
   return {UserImagesGrid: UserImagesGrid};
