ui/webui/resources/cr_elements/chromeos/cr_picture/cr_picture_list.js
@@ -49,7 +49,7 @@ Polymer({
      */
     profileImageUrl_: {
       type: String,
-      value: 'chrome://theme/IDR_PROFILE_PICTURE_LOADING',
+      value: 'chrome://theme/IDR_LOGIN_DEFAULT_USER',
     },
 
     /**
